# entropy-collector

./: CMakeLists.txt  README.md
src/: main.c
